allow evaluation on custom images

--- a/configs/e2e_relation_X_101_32_8_FPN_1x.yaml
+++ b/configs/e2e_relation_X_101_32_8_FPN_1x.yaml
@@ -126,3 +126,5 @@ TEST:
     SYNC_GATHER: True      # turn on will slow down the evaluation to solve the sgdet test out of memory problem
     REQUIRE_OVERLAP: False
     LATER_NMS_PREDICTION_THRES: 0.5
+  CUSTUM_EVAL: False       # eval SGDet model on custum images, output a json
+  CUSTUM_PATH: '.'         # the folder that contains the custum images, only jpg files are allowed  
